--- a/primeiro-site.html
+++ b/primeiro-site.html
@@ -1,9 +1,33 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Primeiro site</title>
+        <meta charset="utf-8">
+        <title>Site pessoal</title>
     </head>
     <body>
-        <p>Hello World!</p>
+        <header>
+            <!-- Os elementos de h1 até h6 são destacar titulos e o elemento h1 só pode haver 1 em cada página -->
+            <h1>Matheus Gabriel</h1>
+        </header>
+        <!-- O elemento "section" está indican uma lista de post-->
+        <section>
+            <!-- O elemento "header" indica um titulo para a página, post ou artigo-->
+            <header>
+                <h2>
+                    Lista de Posts
+                </h2>
+            </header>
+            <article>
+                <header>
+                    <h3>
+                        Post #1
+                    </h3>
+                </header>
+            </article>
+        </section>
+        <!-- O elemento"footer" indica que o conteudo ou elementos dentro dele ficaram no fim da página -->
+        <footer>
+            
+        </footer>
     </body>
 </html>
