--- a/primeiro-site.html
+++ b/primeiro-site.html
@@ -9,6 +9,7 @@
             <!-- Os elementos de h1 até h6 são destacar titulos e 
                 o elemento h1 só pode haver 1 em cada página -->
             <h1>Matheus Gabriel</h1>
+            <img height="100px" width="100px" src="https://hermes.digitalinnovation.one/tracks/800fd098-3eef-45e9-9544-544ae396076c.png" alt="Logo do bootcamp Santander">
         </header>
         <!-- O elemento "section" está indican uma lista de post-->
         <section>
@@ -26,6 +27,7 @@
                 </header>
                 <p>
                     Lorem ipsum dolor sit amet, <a href="https://www.linkedin.com/in/matheus-gabriel-b77ba293/" target="_blank">Perfil do linkedin</a> consectetur adipiscing elit. Nam dui nisl, convallis in nibh vitae, dignissim scelerisque lorem. In ac nisi ut eros venenatis faucibus sit amet non arcu. Nam ullamcorper, tortor id placerat sagittis, leo leo feugiat nibh, sit amet lacinia turpis lorem vitae est. Aliquam blandit malesuada euismod. In ut lobortis eros. Morbi tincidunt efficitur ligula, sed tincidunt mauris. Vivamus vitae fringilla arcu, sed finibus sem. Nullam volutpat, dolor quis vestibulum sagittis, metus urna facilisis augue, pulvinar pulvinar mauris metus ut justo. Donec vestibulum erat augue, nec facilisis dolor ornare vulputate. Suspendisse non dignissim nisl. Suspendisse ac accumsan eros, quis volutpat enim. Sed vestibulum <a href="mailto:matheusg663@gmail.com">Meu e-mail</a> tincidunt sapien, ut consectetur eros faucibus sit amet. In aliquam mollis iaculis. Integer feugiat tellus et purus tempus pretium.
+                    <img height="300px" width="auto" src="html-code.jpg" alt="Código HTML">
                 </p>
             </article>
         </section>
