Adicionando elementos ul e li

--- a/primeiro-site.html
+++ b/primeiro-site.html
@@ -33,7 +33,17 @@
         </section>
         <!-- O elemento"footer" indica que o conteudo ou elementos dentro dele ficaram no fim da página -->
         <footer>
-            
+            <ul>
+                <li>
+                    <a href="https://www.linkedin.com/in/matheus-gabriel-b77ba293/" target="_blank">Perfil do linkedin</a>
+                </li>
+                <li>
+                    <a href="mailto:matheusg663@gmail.com">E-mail</a>
+                </li>
+                <li>
+                    <a href="https://github.com/mathtgm" target="_blank">Github</a>
+                </li>
+            </ul>
         </footer>
     </body>
 </html>
